<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#26A69A"
    android:id="@+id/viewA"

    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="64dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="TUBER"
            android:textColor="@color/accent"
            android:textSize="54dp" />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name (Required)"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username (Required)"
                android:singleLine="true"
                android:textColor="@color/accent"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email (Required)"
                android:singleLine="true"
                android:textColor="@color/accent"

                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password (Required)"
                android:singleLine="true"
                android:textColor="@color/accent"

                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Major Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sMajor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:entries="@array/major_array"
                android:textColor="@color/accent"

                android:prompt="@string/major_select" />
        </android.support.design.widget.TextInputLayout>

        <!-- Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone (Required)"
                android:singleLine="true"
                android:textColor="@color/accent"

                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>



        <!-- Role Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/cb_student" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbTutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/cb_tutor" />
        </android.support.design.widget.TextInputLayout>

        <!-- Price Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Price (Required)"
                android:singleLine="true"
                android:textColor="@color/accent"

                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bUpload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="#10000000"
            android:padding="12dp"

            android:text="Profile Picture (Required)"

            android:textColor="@color/accent"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bRegisterPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="#10000000"
            android:padding="12dp"
            android:text="Register"

            android:textColor="@color/accent"
            />



        <TextView
            android:id="@+id/tvLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="Have an account? Login"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>
