...
            android:textColor="@color/accent"
            android:textSize="18dp"
            android:layout_marginBottom="100dp"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:background="#10000000"
            android:textColor="@color/accent"
            android:text="Login" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:textColor="@color/accent"
...
