...
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etSearchIn"
            android:layout_width="fill_parent"
            android:layout_height="60dp" />


        <!--<Button-->
            <!--android:id="@+id/bSearchName"-->
...
